# bbui

./: .clang-format  .gitignore  CMakeLists.txt  testmain.cpp
inc/: bbui.h  canvas.h  components.h  fwd.h  rendering.h  window.h
lib/: glad.c  glad.h
src/: backend_opengl.cpp  canvas.cpp  components.cpp  default_textures.cpp  renderer.cpp  renderer_objects.cpp  renderer_primitives.cpp  style.cpp  surface_opengl.cpp  transform.cpp  window.cpp
